--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 
 	<div data-role="content">	
         <fieldset class="ui-grid-a">
-            <div class="ui-block-a"><a href="index.html#list-page" data-theme="a" data-role="button" data-icon="grid">TODO-Liste</a></div>
+            <div class="ui-block-a"><a href="index.html#list-page" data-theme="a" data-role="button" data-icon="grid">TODO</a></div>
             <div class="ui-block-b">
-                <a href="index.html#settings" data-role="button" data-icon="gear">Einstellungen</a>
+                <a href="index.html#settings" data-role="button" data-icon="gear">Setup</a>
             </div>
         </fieldset>
 	</div><!-- /content -->
@@ -27,8 +27,9 @@
 </div><!-- /page -->
 <div data-role="page" id="list-page">
 
-	<div data-role="header">
-		<h1>My Title</h1>
+	<div data-role="header" data-position="inline">
+        <a href="index.html" data-icon="home">Startseite</a>
+		<h1>Meine TODOs</h1>
 	</div><!-- /header -->
 
 	<div data-role="content">	
