--- a/index.html
+++ b/index.html
@@ -26,20 +26,19 @@
 
 </div><!-- /page -->
 <div data-role="page" id="list-page">
-
 	<div data-role="header" data-position="inline">
-        <a href="index.html" data-icon="home" data-iconpos="notext"></a>
 		<h1>Meine TODOs</h1>
-        <a href="index.html#settings" data-icon="gear" data-iconpos="notext"></a>
 	</div><!-- /header -->
 
 	<div data-role="content">	
 
         <div id="selected-todo-div" data-theme="a" data-role="collapsible" data-collapsed="false">
-            <h3>Aktuelles TODO</h3>
+            <h3>Aktuell zu tun</h3>
             <div class="ui-grid-a">
                 <div class="ui-block-a">
-                    <p id="cur-todo-label">Change ME</p>
+                    <p id="cur-todo-label">
+                        Dieses Programm fertig stellen.
+                    </p>
                 </div>
                 <div class="ui-block-b">
                     <button data-icon="check">Erledigt</button>
@@ -57,11 +56,18 @@
 
 	</div><!-- /content -->
     <div data-role="footer" data-position="fixed" class="ui-grid-a">
-        <div class="ui-block-a">
-            <button data-icon="plus">Neues TODO</button>
-        </div>
-        <div class="ui-block-b">
-            <button>TBD</button>
+        <div data-role="navbar">
+            <ul>
+            	<li>
+            		<a href="#" data-icon="plus">Neu</a>
+            	</li>
+                <li>
+                	<a href="#" data-icon="home">Startseite</a>
+                </li>
+                <li>
+                	<a href="#" data-icon="gear">Einstellungen</a>
+                </li>
+            </ul>
         </div>
     </div>
 
