--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
+    <script type="text/javascript" src="finish.js"></script>
+    <script type="text/javascript">
+        $('#list-page').live('pageshow', onListPageShown);
+    </script>
 </head> 
 <body> 
 
