--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div data-role="navbar">
             <ul>
             	<li>
-            		<a href="#" data-icon="plus">Neues TODO</a>
+            		<a href="#new-task" data-icon="plus">Neues TODO</a>
             	</li>
                 <li>
                 	<a href="index.html" data-icon="home">Startseite</a>
@@ -78,6 +78,33 @@
     </div>
 
 </div><!-- /page -->
+
+<div data-role="page" id="new-task">
+    <div data-role="header"><h1>Neue Aufgabe anlegen</h1></div>
+    <div data-role="content">
+    
+        <form action="index.html#list-page" data-ajax="false" onsubmit="return checkNewTask();">
+            <div data-role="fieldcontain">
+                <label for="new-task-name">Titel</label>
+                <input type="text" id="new-task-name" name="new-task-name" />
+            </div>
+            <div data-role="fieldcontain">
+                <label for="preemptive">Ersetzt aktuelle Aufgabe?</label>
+                <select id="preemptive" name="preemptive" data-role="slider">
+                    <option value="no">Nein</option>
+                    <option value="yes">Ja</option>
+                </select>
+            </div>
+            <fieldset class="ui-grid-a">
+                <div class="ui-block-a">
+                    <a href="index.html#list-page" data-role="button" data-theme="d">Abbrechen</a>
+                </div>
+                <div class="ui-block-b"><button type="submit" data-theme="a">Speichern</button></div>
+            </fieldset>
+
+        </form>
+    </div>
+</div>
 
 </body>
 </html>
