--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
 	<title>Finish what you started.</title> 
 	<meta name="viewport" content="width=device-width, initial-scale=1"> 
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.css" />
+	<link rel="stylesheet" href="main.css" />
 	<script type="text/javascript" src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
 	<script type="text/javascript" src="http://code.jquery.com/mobile/1.0/jquery.mobile-1.0.min.js"></script>
     <script type="text/javascript" src="jStorage/jstorage.min.js"></script>
     <script type="text/javascript" src="finish.js"></script>
     <script type="text/javascript">
         $('#list-page').live('pageshow', onListPageShown);
+        $('#delete-task').live('pageshow', onDeleteTaskPageShown);
     </script>
 </head> 
 <body> 
@@ -32,6 +34,7 @@
 </div><!-- /page -->
 <div data-role="page" id="list-page">
 	<div data-role="header" data-position="inline">
+        <a href="index.html" data-iconpos="notext" data-icon="home"></a>
 		<h1>Meine TODOs</h1>
 	</div><!-- /header -->
 
@@ -41,7 +44,7 @@
             <h3>Aktuell zu tun</h3>
             <div class="ui-grid-a">
                 <div class="ui-block-a">
-                    <p id="cur-todo-label">
+                    <p id="cur-todo-label" class="active-task">
                         Dieses Programm fertig stellen.
                     </p>
                 </div>
@@ -65,13 +68,10 @@
         <div data-role="navbar">
             <ul>
             	<li>
-            		<a href="#new-task" data-icon="plus">Neues TODO</a>
+            		<a href="#new-task" data-icon="plus"></a>
             	</li>
                 <li>
-                	<a href="index.html" data-icon="home">Startseite</a>
-                </li>
-                <li>
-                	<a href="#" data-icon="gear">Einstellungen</a>
+                	<a href="#delete-task" data-icon="minus"></a>
                 </li>
             </ul>
         </div>
@@ -102,6 +102,23 @@
                 <div class="ui-block-b"><button type="submit" data-theme="a">Speichern</button></div>
             </fieldset>
 
+        </form>
+    </div>
+</div>
+<div data-role="page" id="delete-task">
+    <div data-role="header"><h1>Aufgaben entfernen</h1></div>
+    <div data-role="content">
+    
+        <form action="index.html#list-page" data-ajax="false" onsubmit="return checkDeleteTask();">
+            <h3>Vorhandene Tasks</h3>
+            <select id="tasks-to-delete" name="tasks-to-delete">
+            </select>
+            <fieldset class="ui-grid-a">
+                <div class="ui-block-a">
+                    <a href="index.html#list-page" data-role="button" data-theme="d">Abbrechen</a>
+                </div>
+                <div class="ui-block-b"><button type="submit" data-theme="a">L&ouml;schen</button></div>
+            </fieldset>
         </form>
     </div>
 </div>
