resetting current task

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </p>
                 </div>
                 <div class="ui-block-b">
-                    <button data-icon="check">Erledigt</button>
+                    <a href="javascript:onTaskDone()" data-role="button">Erledigt</a>
                 </div>
             </div>
         </div>
