--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <div id="open-todos-list-div" data-role="collapsible" data-theme="e">
             <h3>Offene TODOs</h3>
-            <ul data-role="listview" data-filter="true" id="open-todos-ul">
+            <ul data-role="listview" data-filter="true" id="open-todos-ul" data-split-icon="star">
                 <li>Foo 
                 <a href="#" data-icon="star"></a>
                 </li>
