--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                     </p>
                 </div>
                 <div class="ui-block-b">
-                    <a href="javascript:onTaskDone()" data-role="button">Erledigt</a>
+                    <a href="javascript:onTaskDone()" data-role="button" data-icon="check">Erledigt</a>
                 </div>
             </div>
         </div>
 
-        <div id="open-todos-list-div" data-role="collapsible" data-theme="e">
+        <div id="open-todos-list-div" data-role="collapsible" data-theme="e" data-collapsed="false">
             <h3>Offene TODOs</h3>
             <ul data-role="listview" data-filter="true" id="open-todos-ul" data-split-icon="star">
                 <li>Foo 
