Substituted pre with div as pre broke iOS rendering

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div data-role="content data-role="content"">
         <dl title="Info">
             <dd>
-                <pre id="info-text" data-theme="a"></pre>
+                <div id="info-text" data-theme="a"></div>
             </dd>
         </dl>
     </div>
